--- a/app/src/main/res/layout/fragment_category_english.xml
+++ b/app/src/main/res/layout/fragment_category_english.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/red"
-    android:id="@+id/first">
+    android:background="@color/red">
 
 
     <androidx.cardview.widget.CardView
@@ -13,7 +11,7 @@
         android:layout_height="match_parent">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/category_words_list"
+            android:id="@+id/category_eng_words_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/white"
