--- a/app/src/main/res/layout/activity_category.xml
+++ b/app/src/main/res/layout/activity_category.xml
@@ -62,12 +62,12 @@
                     <com.google.android.material.tabs.TabItem
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Turkmen"
+                        android:text="Russian"
                         android:backgroundTint="@color/red"/>
                     <com.google.android.material.tabs.TabItem
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Rus"
+                        android:text="English"
                         android:backgroundTint="@color/red"/>
                 </com.google.android.material.tabs.TabLayout>
             </RelativeLayout>
